--- a/css/main.css
+++ b/css/main.css
@@ -86,6 +86,7 @@ footer {
 
 #pHandCards, #cHandCards {
     border: 0.1vmin solid black;
+    box-shadow: 5px 10px 10px 5px black;
 }
 
 #pwar, #cwar {
@@ -96,7 +97,6 @@ footer {
 
 #cCardCount, #pCardCount {
     text-align: center;
-    /* margin: 0px; */
     font-family: 'Anton', sans-serif;
     font-size: 25px;
 }
