--- a/css/main.css
+++ b/css/main.css
@@ -18,8 +18,9 @@ main {
     justify-content: center;
     gap: 10vmin;
     margin: 0px;
-    align-items: center;
-
+    font-size: 20px;
+    color: white;
+    font-family: 'Anton', sans-serif;
 }
 
 section {
@@ -59,6 +60,7 @@ section {
     cursor: pointer;
     font-size: 20px;
     font-family: 'Anton', sans-serif;
+    box-shadow: 5px 10px 10px 5px black;
 }
 
 #replay {
@@ -90,9 +92,7 @@ footer {
 }
 
 #pwar, #cwar {
-    
     border: 0.1vmin solid black;
-
 }
 
 #cCardCount, #pCardCount {
